--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,8 +6,8 @@
     <title>Title</title>
 </head>
 <body>
-
-<form action="/admin" method="post" enctype="multipart/form-data" id="form">
+<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+<form target="dummyframe" action="/admin" method="post" enctype="multipart/form-data" id="form">
      <div class="team_select" id="team1">
     <label for="team1_name">Team 1 Name:</label>
     <input type="text" id="team1_name" name="team1_name" required>
@@ -21,12 +21,8 @@
   </select><br><br>
 <br>
     <p><strong>Team 1 Players:</strong></p>
-       <input class="single-checkbox" type="checkbox"  name="team1_players" value="PNxNaveedVS">PNxNaveedVS<br>
-          <input class="single-checkbox" type="checkbox"  name="team1_players" value="DIGTxPractice3VS">DIGTxPractice3VS<br>
-          <input class="single-checkbox" type="checkbox"  name="team1_players" value="MEGAxBIGJAEGERVS">MEGAxBIGJAEGERVS<br>
-          <input class="single-checkbox" type="checkbox" name="team1_players" value="R3STxAscenderVS">R3STxAscenderVS<br>
-          <input class="single-checkbox" type="checkbox" name="team1_players" value="PW3RxCrimsonFaustVS">PW3RxCrimsonFaustVS<br>
-          <input class="single-checkbox" type="checkbox" name="team1_players" value="C4CRxShadowguardNS">C4CRxShadowguardNS<br>
+         <div id="team1_player_select">
+    </div>
      </div>
     <div class="team_select" id="team2">
     <label for="team2_name">Team 2 Name:</label>
@@ -41,15 +37,31 @@
   </select><br><br>
 <br>
     <p><strong>Team 2 Players:</strong></p>
-       <input class="single-checkbox" type="checkbox"  name="team2_players" value="diksxdylratTR">diksxdylratTR<br>
-          <input class="single-checkbox" type="checkbox"  name="team2_players" value="MEGAxBIGJAEGERTR">MEGAxBIGJAEGERTR<br>
-          <input class="single-checkbox" type="checkbox"  name="team2_players" value="PSBAdm02TR">PSBAdm02TR<br>
-          <input class="single-checkbox" type="checkbox" name="team2_players" value="PW3RxAzagarxTR">PW3RxAzagarxTR<br>
-          <input class="single-checkbox" type="checkbox" name="team2_players" value="PSBx0923TR">PSBx0923TR<br>
-          <input class="single-checkbox" type="checkbox" name="team2_players" value="SHTRxswcloneTR">SHTRxswcloneTR<br>
+        <div id="team2_player_select">
     </div>
+        </div>
     <button type="submit" id="submit">Submit</button>
   </form>
+ <script>
+    $(function () {
+        const url = 'https://wt.honu.pw/api/character/online?worldID=1';
+        // Populate dropdown with list of provinces
+        $.getJSON(url, function (data) {
+            $.each(data, function (key, entry) {
+                if (entry.factionID == $('#team1_faction').val() ||  entry.factionID ==4){
+                     $('#team1_player_select').append(`<input class="single-checkbox" type="checkbox"  name="team1_players" value="${entry.name}">${entry.name}<br>`);
+                }
+                 if (entry.factionID == $('#team2_faction').val() ||  entry.factionID ==4){
+                     $('#team2_player_select').append(`<input class="single-checkbox" type="checkbox"  name="team2_players" value="${entry.name}">${entry.name}<br>`);
+                }
+
+
+            })
+        });
+
+    })
+</script>
+
 <script>
     var limit = 6;
     $('input.single-checkbox').on('change', function (evt) {
