--- a/templates/overlay.html
+++ b/templates/overlay.html
@@ -9,35 +9,7 @@
 </body>
 
 <script>
-function startTimer(duration, display) {
-    var start = Date.now(),
-        diff,
-        minutes,
-        seconds;
-    function timer() {
-        // get the number of seconds that have elapsed since
-        // startTimer() was called
-        diff = duration - (((Date.now() - start) / 1000) | 0);
 
-        // does the same job as parseInt truncates the float
-        minutes = (diff / 60) | 0;
-        seconds = (diff % 60) | 0;
-
-        minutes = minutes < 10 ? "0" + minutes : minutes;
-        seconds = seconds < 10 ? "0" + seconds : seconds;
-
-        display.textContent = minutes + ":" + seconds;
-
-        if (diff <= 0) {
-            // add one second so that the count down starts at the full duration
-            // example 05:00 not 04:59
-            start = Date.now() + 1000;
-        }
-    };
-    // we don't want to wait a full second before the timer starts
-    timer();
-    setInterval(timer, 1000);
-}
 
 
 </script>
@@ -48,14 +20,15 @@ function startTimer(duration, display) {
         let msg = JSON.parse(event.data);
 
 
-        if (msg.start){
-            msg = JSON.parse(msg.start)
-            console.log(msg)
-            console.log((msg.time_limit))
-            console.log(parseInt(msg.time_limit))
-            display = document.querySelector('#time');
-            startTimer(parseInt(msg.time_limit), display);
-        }
+        console.log(msg)
+
+        minutes = (msg.time / 60) | 0;
+        seconds = (msg.time % 60) | 0;
+
+        minutes = minutes < 10 ? "0" + minutes : minutes;
+        seconds = seconds < 10 ? "0" + seconds : seconds;
+
+        document.querySelector('#time').textContent = minutes + ":" + seconds;
         document.querySelector('#team1_name').textContent=msg.teams[0].name
         document.querySelector('#team1_points').textContent=msg.teams[0].score
         document.querySelector('#team2_name').textContent=msg.teams[1].name
