--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,14 +7,17 @@
     <title>Title</title>
 </head>
 <body>
+<div id="match_control">
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 <form target="dummyframe" action="/startGame" method="post" enctype="multipart/form-data" id="startForm">
-    <button type="submit" id="Start Game">Start Match</button>
+     <label for="time_limit">Time Limit</label>
+        <input type="number" id="time_limit" name="time_limit" value="900"  required>
+    <button type="submit" id="Start Time">Start Time</button>
 </form>
 <form target="dummyframe" action="/endGame" method="post" enctype="multipart/form-data" id="endGame">
-    <button type="submit" id="End Game">End Match</button>
+    <button type="submit" id="End Time">End Time</button>
 </form>
-
+</div>
 <form target="dummyframe" action="/admin" method="post" enctype="multipart/form-data" id="form">
     <div class="team_select" id="team1">
         <label for="team1_name">Team 1 Name:</label>
@@ -22,14 +25,14 @@
         <br>
         <br>
         <label for="team1_faction">Team 1 Faction:</label>
-        <select id="team1_faction" name="team1_faction">
+        <select id="team1_faction" name="team1_faction" onchange="updatePlayers()" >
             <option value=1>VS</option>
             <option value=2>NC</option>
             <option value=3>TR</option>
         </select><br><br>
         <br>
         <p><strong>Team 1 Players:</strong></p>
-        <div id="team1_player_select">
+        <div class="player_select" id="team1_player_select">
         </div>
     </div>
     <div class="team_select" id="team2">
@@ -38,18 +41,22 @@
         <br>
         <br>
         <label for="team2_faction">Team 2 Faction:</label>
-        <select id="team2_faction" name="team2_faction">
+        <select id="team2_faction" name="team2_faction" onchange="updatePlayers()">
             <option value=1>VS</option>
             <option value=2>NC</option>
             <option value=3>TR</option>
         </select><br><br>
         <br>
         <p><strong>Team 2 Players:</strong></p>
-        <div id="team2_player_select">
+        <div class="player_select" id="team2_player_select">
         </div>
     </div>
     <button type="submit" id="submit">Initialize Teams</button>
 </form>
+<form target="dummyframe" action="/clearGame" method="post" enctype="multipart/form-data" id="clearMatch">
+    <button type="submit" id="End Game">End Game</button>
+</form>
+
 <script>
     $(function () {
         const url = 'https://wt.honu.pw/api/character/online?worldID=19';
@@ -69,14 +76,38 @@
 
     })
 </script>
-
 <script>
-    var limit = 6;
-    $('input.single-checkbox').on('change', function (evt) {
-        if ($(this).siblings(':checked').length >= limit) {
+    function updatePlayers(value) {
+            const url = 'https://wt.honu.pw/api/character/online?worldID=19';
+
+     $('#team1_player_select').empty();
+     $('#team2_player_select').empty();
+            $.getJSON(url, function (data) {
+                $.each(data, function (key, entry) {
+                    if (entry.factionID == $('#team1_faction').val() || entry.factionID == 4) {
+                        $('#team1_player_select').append(`<input class="single-checkbox" type="checkbox"  name="team1_players" value="${entry.name}">[${entry.outfitTag}]${entry.name}<br>`);
+                    }
+                    if (entry.factionID == $('#team2_faction').val() || entry.factionID == 4) {
+                        $('#team2_player_select').append(`<input class="single-checkbox" type="checkbox"  name="team2_players" value="${entry.name}">[${entry.outfitTag}]${entry.name}<br>`);
+                    }
+
+
+                })
+            });
+
+
+    }
+
+    </script>
+        <script>
+            var limit = 6;
+            $('input.single-checkbox').on('change', function (evt) {
+            if ($(this).siblings(':checked').length >= limit) {
             this.checked = false;
         }
-    });
+        });
+
 </script>
+
 </body>
 </html>
